# ETH_bus_dashboard

./: .gitignore  README.md  docker-compose.db.yml
backend/: .env.example  pyproject.toml
backend/app/: auth.py  config.py  conversions.py  db.py  hash_password.py  main.py  models.py  schema.sql
backend/app/routers/: auth.py  ingest.py  query.py
backend/scripts/: load_samples.py
backend/tests/: conftest.py  test_auth.py  test_conversions.py  test_ingest_roundtrip.py  test_models.py  test_query.py
frontend/: package-lock.json
frontend/src/: App.css  App.tsx  api.ts  hooks.ts  index.css
frontend/src/components/: DistributionChart.tsx  FilterBar.tsx  KpiCards.tsx  Login.tsx  TrendChart.tsx
